--- a/.env.example
+++ b/.env.example
@@ -2,20 +2,47 @@
 # Rename this file to .env and fill in your actual values
 
 # Supabase Configuration
-SUPABASE_URL="YOUR_SUPABASE_URL"
-SUPABASE_KEY="YOUR_SUPABASE_SERVICE_ROLE_KEY" # Use the service_role key for backend
+SUPABASE_URL=your_supabase_url
+SUPABASE_KEY=your_supabase_key
 # SUPABASE_CONNECTION_STRING="YOUR_SUPABASE_DB_CONNECTION_STRING_WITH_PASSWORD" # Optional, if needed for direct DB access tools
 
 # OpenAI Configuration
-OPENAI_API_KEY="YOUR_OPENAI_API_KEY"
+OPENAI_API_KEY=your_openai_api_key
+
+# BRAINTRUST Configuration
+BRAINTRUST_API_KEY=your_braintrust_api_key
 
 # NMKR Configuration
-NMKR_API_KEY="YOUR_NMKR_API_KEY"
-NMKR_PROJECT_UID="YOUR_NMKR_PROJECT_UID" # Find this in your NMKR Studio project
+NMKR_API_KEY=your_nmkr_api_key
+NMKR_PROJECT_UID=your_nmkr_project_uid
+NMKR_POLICY_ID=your_nmkr_policy_id
 
-# Masumi Configuration (Optional - Enable if using payments)
-MASUMI_API_KEY="YOUR_MASUMI_API_KEY"
-# MASUMI_PAYMENT_URL="https://api.masumi.network" # Default, override if needed
+# Masumi Configuration
+MASUMI_API_KEY=your_masumi_api_key
+MASUMI_PAYMENT_URL=http://host.docker.internal:3001
+
+# Replicate Configuration
+REPLICATE_API_TOKEN=your_replicate_api_token
+
+# Receive Wallet Address
+RECEIVE_WALLET=your_cardano_wallet_address
+
+# RabbitMQ Configuration
+RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672/
+
+# Telegram Bot Configuration
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token
 
 # Hot Wallet Configuration (Optional - For demo signing, handle securely)
-HOT_WALLET_MNEMONIC="YOUR_CARDANO_HOT_WALLET_SEED_PHRASE" # Store securely! 
+HOT_WALLET_MNEMONIC="YOUR_CARDANO_HOT_WALLET_SEED_PHRASE" # Store securely!
+
+# SERVICES
+API_URL=http://agent-api:8000
+
+# PAYMENT SETTINGS
+PAYMENT_REDIRECT_URL=https://example.com/payment/success
+PAYMENT_CALLBACK_URL=https://example.com/payment/callback
+
+# Optional Env Variables
+# AGENT SETTINGS
+LOG_LEVEL=INFO 
