--- a/crewai_meeting_agent/requirements.txt
+++ b/crewai_meeting_agent/requirements.txt
@@ -1,10 +1,13 @@
 fastapi
 uvicorn
 python-dotenv
-agno
+crewai
+crewai-tools
+openai
 masumi
 pydantic
 python-multipart
 httpx
 openai
 requests
+markdown
