push finance report Agent

--- a/agno_finance_report_agent/requirements.txt
+++ b/agno_finance_report_agent/requirements.txt
@@ -1,4 +1,3 @@
-googlesearch-python
 pycountry
 fastapi
 uvicorn
@@ -14,3 +13,6 @@ yfinance
 firecrawl
 exa-py
 googlesearch-python
+boto3
+pandoc
+pdflatex
